[gd_scene load_steps=2 format=3 uid="uid://7i2ltxhfe2tn"]

[ext_resource type="Script" path="res://uis/layer1/home.gd" id="1_blhe6"]

[node name="Home" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_blhe6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -480.0
offset_bottom = -92.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10

[node name="NewGameBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "NEW_GAME"

[node name="ContinueBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "CONTINUE_GAME"

[node name="SettingsBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "SETTINGS"

[node name="QuitBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "QUIT_GAME
"

[connection signal="pressed" from="VBoxContainer/NewGameBtn" to="." method="_on_new_game_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinueBtn" to="." method="_on_continue_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsBtn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
